// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customers_subscriptions .all() should return a list of all customer subscriptions 1`] = `
Array [
  Subscription {
    "amount": "25.00",
    "cancelledDatetime": null,
    "createdDatetime": "2017-02-01T12:23:34.0Z",
    "customerId": "cst_stTC2WHAuS",
    "description": "Quarterly payment",
    "id": "sub_rVKGtNd6s3",
    "interval": "3 months",
    "links": Object {
      "webhookUrl": "https://example.org/payments/webhook",
    },
    "method": null,
    "mode": "live",
    "resource": "subscription",
    "status": "active",
    "times": 4,
  },
]
`;

exports[`customers_subscriptions .all() should work with a callback 1`] = `
Array [
  Subscription {
    "amount": "25.00",
    "cancelledDatetime": null,
    "createdDatetime": "2017-02-01T12:23:34.0Z",
    "customerId": "cst_stTC2WHAuS",
    "description": "Quarterly payment",
    "id": "sub_rVKGtNd6s3",
    "interval": "3 months",
    "links": Object {
      "webhookUrl": "https://example.org/payments/webhook",
    },
    "method": null,
    "mode": "live",
    "resource": "subscription",
    "status": "active",
    "times": 4,
  },
]
`;

exports[`customers_subscriptions .cancel() should return a subscription instance 1`] = `
Subscription {
  "amount": "25.00",
  "cancelledDatetime": null,
  "createdDatetime": "2017-02-01T12:23:34.0Z",
  "customerId": "cst_stTC2WHAuS",
  "description": "Quarterly payment",
  "id": "sub_rVKGtNd6s3",
  "interval": "3 months",
  "links": Object {
    "webhookUrl": "https://example.org/payments/webhook",
  },
  "method": null,
  "mode": "live",
  "resource": "subscription",
  "status": "active",
  "times": 4,
}
`;

exports[`customers_subscriptions .cancel() should work with a callback 1`] = `
Subscription {
  "amount": "25.00",
  "cancelledDatetime": null,
  "createdDatetime": "2017-02-01T12:23:34.0Z",
  "customerId": "cst_stTC2WHAuS",
  "description": "Quarterly payment",
  "id": "sub_rVKGtNd6s3",
  "interval": "3 months",
  "links": Object {
    "webhookUrl": "https://example.org/payments/webhook",
  },
  "method": null,
  "mode": "live",
  "resource": "subscription",
  "status": "active",
  "times": 4,
}
`;

exports[`customers_subscriptions .create() should return a subscription instance 1`] = `
Subscription {
  "amount": "25.00",
  "cancelledDatetime": null,
  "createdDatetime": "2017-02-01T12:23:34.0Z",
  "customerId": "cst_stTC2WHAuS",
  "description": "Quarterly payment",
  "id": "sub_rVKGtNd6s3",
  "interval": "3 months",
  "links": Object {
    "webhookUrl": "https://example.org/payments/webhook",
  },
  "method": null,
  "mode": "live",
  "resource": "subscription",
  "status": "active",
  "times": 4,
}
`;

exports[`customers_subscriptions .get() should return a subscription instance 1`] = `
Subscription {
  "amount": "25.00",
  "cancelledDatetime": null,
  "createdDatetime": "2017-02-01T12:23:34.0Z",
  "customerId": "cst_stTC2WHAuS",
  "description": "Quarterly payment",
  "id": "sub_rVKGtNd6s3",
  "interval": "3 months",
  "links": Object {
    "webhookUrl": "https://example.org/payments/webhook",
  },
  "method": null,
  "mode": "live",
  "resource": "subscription",
  "status": "active",
  "times": 4,
}
`;
